--- a/style.css
+++ b/style.css
@@ -1,81 +1,130 @@
-*{
-    margin: 0;
-	padding: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  background: black;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  line-height: 1.6;
 }
 
 
-body{
-	margin: 0;
-	height: 100%;
-	background: url(fondo.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-attachment: fixed;
-	justify-content: center;
-	align-items: center;
-}
-
-body::before{
-	content:"";
-	width:100%;
-	height: 100%;
-	position: fixed;
-	top: 0;
-	left: 0;
-	background: linear-gradient(45deg,navy,lightblue,navy,purple,pink,purple);
-	opacity: 0.8;
-	z-index: -1;
-}
-
-.lista{
-    list-style: none;
-    text-align: center; 
-    margin: 20px auto;
-    color: white;
-}
-
-.lista li{
-    margin: 5px auto;
-	width: 100%;
-}
-
-img {
-	width: 150px;
-	height: 150px;
+#galeria {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  grid-template-columns: repeat(150px, 1fr);
+  grid-gap: 10px;
+  padding: 10px;
+  margin: 15px auto;
 }
 
 @media (max-width: 768px) {
-	img {
-		width: 100px;
-		height: 100px;
-	}
+  #galeria {
+      grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+      grid-auto-rows: minmax(100px, auto);
+  }
 }
-
 @media (min-width: 1024px) {
-	img {
-		width: 200px;
-		height: 200px;
-	}
+  #galeria {
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      grid-auto-rows: minmax(200px, auto);
+  }
 }
 
-h5 {
-	font-family: sans-serif;
-	font-size: 0.75rem;
-	margin-bottom: 20px;
+#galeria img {
+  width: 100%;
+  height: auto;
+  border: solid 0.5px blue;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#img-activa {
+  border-radius: 5px;
+  width: 300px;
+  height: auto;
 }
 
 @media (max-width: 768px) {
-	h5 {
-		font-size: 0.7rem;
-	}
+  #img-activa {
+    width: 250px;
+    height: auto;
+  }
+}
+@media (min-width: 1024px) {
+  #img-activa {
+    width: 324px;
+    height: auto;
+  }
 }
 
+
+#contenedor-principal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.55);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+
+#contenedor-interno {
+  border: 1px white solid;
+  border-radius: 5px;
+  padding: 2px;
+  background: transparent;
+  max-width: 310px;
+  min-height: 310px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+@media (max-width: 768px) {
+  #contenedor-interno {
+    max-width: 260px;
+    min-height: 260px;
+  }
+}
 @media (min-width: 1024px) {
-	h5 {
-		font-size: 1rem;
-	}
+  #contenedor-interno {
+    max-width: 350px;
+    min-height: 350px;
+  }
+}
+
+/*Botones*/
+
+button {
+  cursor: pointer;
+  background: transparent;
+  color: white;
+}
+
+#btn-cierra {
+  position: absolute;
+  top: 105%;
+  left: 46%;
+  font-size: 1rem;
+}
+
+#btn-retrocede {
+  position: absolute;
+  top: 105%;
+  left: 0;
+  font-size: 1rem;
+}
+
+#btn-adelanta {
+  position: absolute;
+  top: 105%;
+  right: 0;
+  font-size: 1rem;
 }
